# seril

./: README.md
src/: CMakeLists.txt  Idatacolumn.hpp  Idatacontract.hpp  Ideserializationcontext.hpp  Iquerycontext.hpp  Iserializable.hpp  Iserializationcontext.hpp  Iserialized.hpp  binarycolumn.cpp  binarycolumn.hpp  column.cpp  column.hpp  integercolumn.cpp  integercolumn.hpp  numbercolumn.cpp  serializationexception.cpp  serializationexception.hpp  sqlitedatacontract.cpp  sqlitedeserializationcontext.cpp  sqlitequerycontext.cpp  sqliteserializationcontext.cpp  sqliteserialized.cpp  stringcolumn.cpp  stringcolumn.hpp  transaction.hpp
src/seril/: Idatacolumn.hpp  Idatacontract.hpp  Ideserializationcontext.hpp  Iquerycontext.hpp  Iserializationcontext.hpp  binarycolumn.hpp  column.hpp  column.inl  numbercolumn.hpp  serializationexception.hpp  sqliteconnection.hpp  sqlitedatacontract.hpp  sqlitedeserializationcontext.hpp  sqlitequerycontext.hpp  sqliteserializationcontext.hpp  transaction.hpp
src/sqlite/: sqliteconnection.hpp  sqlitedatacontract.cpp  sqlitedatacontract.hpp  sqlitedeserializationcontext.cpp  sqlitedeserializationcontext.hpp  sqlitequerycontext.cpp  sqlitequerycontext.hpp  sqliteserializationcontext.cpp  sqliteserializationcontext.hpp  sqliteserialized.cpp  sqliteserialized.hpp
